@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.5.8
+VERSION=1.5.9
 
 DEPENDENCY="zeda=1.3.1;zm=1.2.19"
